后台管理页面数据修改

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,3 +87,9 @@
 .weintern-white-normal {
 	color: #F5F5F7;
 }
+
+.text-over{
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
