--- a/views/pages/categoryResult.jade
+++ b/views/pages/categoryResult.jade
@@ -4,7 +4,7 @@ block content
 		.row
 			.col-md-12
 				.panel.panel-default
-					each cat in categoris
+					each cat in categories
 						.panel-heading
 							h3 #{cat.name}
 						.panel-body
@@ -16,14 +16,14 @@ block content
 												a(href="/weintern/job/detail/" + item._id)
 													img(src="/uploads/#{item.image}", alt="#{item.company}", style="height:350px;")
 												.caption
-													span.weintern-font-larger.weintern-black-deeper #{item.company}
-													span.weintern-font-larger.weintern-black-deeper.pull-right #{item.jobname}
+													span.weintern-font-larger.weintern-black-deeper.text-over(style="width:50%") #{item.company}
+													span.weintern-font-larger.weintern-black-deeper.pull-right.text-over(style="width:50%") #{item.jobname}
 													if item.salary != "不限"
-														h5.weintern-gray-normal ￥#{item.salary}元/天 | #{item.internWeek}天/周 | #{item.interMonth}个月 |
+														h5.weintern-gray-normal.text-over ￥#{item.salary}元/天 | #{item.internWeek}天/周 | #{item.interMonth}个月 |
 															if item.canBeRegular
 															|  可转正
 													else
-														h5.weintern-gray-normal 薪资#{item.salary} | #{item.internWeek}天/周 | #{item.interMonth}个月 |
+														h5.weintern-gray-normal.text-over 薪资#{item.salary} | #{item.internWeek}天/周 | #{item.interMonth}个月 |
 															if item.canBeRegular
 															|  可转正
 													a.btn.btn-primary(href="/weintern/job/detail/#{item._id}",role="button") 查看岗位详情
@@ -36,13 +36,13 @@ block content
 											li.previous
 												a(href='/weintern/job/category/result?cat=#{categoryId}&pageSize=#{pageSize - 1}') «
 										-for(var i = 0; i < page; i++){
-										-if( pageSize == (i+1)){
-										li.active
-											span #{pageSize}
-										-}else{
-										li
-											a(href='/weintern/job/category/result?cat=#{categoryId}&pageSize=#{i + 1}') #{i + 1}
-										-}
+											-if( pageSize == (i+1)){
+											li.active
+												span #{pageSize}
+											-}else{
+											li
+												a(href='/weintern/job/category/result?cat=#{categoryId}&pageSize=#{i + 1}') #{i + 1}
+											-}
 										-}
 										if pageSize + 1 > page
 											li.next.disabled
