--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -19,14 +19,14 @@ block content
 													a(href="/weintern/job/detail/" + item._id)
 														img(src="/uploads/#{item.image}", alt="#{item.company}", style="height:350px;")
 													.caption
-														span.weintern-font-larger.weintern-black-deeper(style="display:inline-block;width:50%;white-space: nowrap;text-overflow: ellipsis;overflow: hidden;") #{item.company}
-														span.weintern-font-larger.weintern-black-deeper.pull-right(style="display:inline-block;width:50%;white-space: nowrap;text-overflow: ellipsis;overflow: hidden;") #{item.jobname}
+														span.weintern-font-larger.weintern-black-deeper.text-over(style="display:inline-block;width:50%;") #{item.company}
+														span.weintern-font-larger.weintern-black-deeper.pull-right.text-over(style="display:inline-block;width:50%;") #{item.jobname}
 														if item.salary != "不限"
-															h5.weintern-gray-normal ￥#{item.salary}元/天 | #{item.internWeek}天/周 | #{item.interMonth}个月 |
+															h5.weintern-gray-normal.text-over ￥#{item.salary}元/天 | #{item.internWeek}天/周 | #{item.interMonth}个月 |
 																if item.canBeRegular
 																|  可转正
 														else
-															h5.weintern-gray-normal 薪资#{item.salary} | #{item.internWeek}天/周 | #{item.interMonth}个月 |
+															h5.weintern-gray-normal.text-over 薪资#{item.salary} | #{item.internWeek}天/周 | #{item.interMonth}个月 |
 																if item.canBeRegular
 																|  可转正
 														a.btn.btn-primary(href="/weintern/job/detail/#{item._id}",role="button") 查看岗位详情
@@ -37,7 +37,7 @@ block content
 								.panel-heading.clearfix(style="position:relative")
 									h3 #{worksite.addr}
 									if worksite.jobs && worksite.jobs.length >= 4
-										a(href="/weintern/job/worksite/result?cat=#{worksite._id}&pageSize=1",style="position: absolute;right: 15px;top:35px;font-size:14px;") MORE >>
+										a(href="/weintern/job/worksite/result?site=#{worksite._id}&pageSize=1",style="position: absolute;right: 15px;top:35px;font-size:14px;") MORE >>
 								.panel-body
 									.row
 										each item in worksite.jobs
@@ -46,14 +46,14 @@ block content
 													a(href="/weintern/job/detail/" + item._id)
 														img(src="/uploads/#{item.image}", alt="#{item.company}", style="height:350px;")
 													.caption
-														span.weintern-font-larger.weintern-black-deeper #{item.company}
-														span.weintern-font-larger.weintern-black-deeper.pull-right #{item.jobname}
+														span.weintern-font-larger.weintern-black-deeper.text-over(style="display:inline-block;width:50%;") #{item.company}
+														span.weintern-font-larger.weintern-black-deeper.pull-right.text-over(style="display:inline-block;width:50%;") #{item.jobname}
 														if item.salary != "不限"
-															h5.weintern-gray-normal ￥#{item.salary}元/天 | #{item.internWeek}天/周 | #{item.interMonth}个月 |
+															h5.weintern-gray-normal.text-over ￥#{item.salary}元/天 | #{item.internWeek}天/周 | #{item.interMonth}个月 |
 																if item.canBeRegular
 																|  可转正
 														else
-															h5.weintern-gray-normal 薪资#{item.salary} | #{item.internWeek}天/周 | #{item.interMonth}个月 |
+															h5.weintern-gray-normal.text-over 薪资#{item.salary} | #{item.internWeek}天/周 | #{item.interMonth}个月 |
 																if item.canBeRegular
 																|  可转正
 														a.btn.btn-primary(href="/weintern/job/detail/#{item._id}",role="button") 查看岗位详情
