--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -20,7 +20,7 @@ block content
 														img(src="/uploads/#{item.image}", alt="#{item.company}", style="height:350px;")
 													.caption
 														span.weintern-font-larger.weintern-black-deeper.text-over(style="display:inline-block;width:50%;") #{item.company}
-														span.weintern-font-larger.weintern-black-deeper.pull-right.text-over(style="display:inline-block;width:50%;") #{item.jobname}
+														span.weintern-font-larger.weintern-black-deeper.text-over(style="display:inline-block;width:50%;") #{item.jobname}
 														h5.weintern-gray-normal.text-over
 															if item.salary != "不限"
 																span ￥#{item.salary}元/天 |
@@ -58,7 +58,7 @@ block content
 														img(src="/uploads/#{item.image}", alt="#{item.company}", style="height:350px;")
 													.caption
 														span.weintern-font-larger.weintern-black-deeper.text-over(style="display:inline-block;width:50%;") #{item.company}
-														span.weintern-font-larger.weintern-black-deeper.pull-right.text-over(style="display:inline-block;width:50%;") #{item.jobname}
+														span.weintern-font-larger.weintern-black-deeper.text-over(style="display:inline-block;width:50%;") #{item.jobname}
 														h5.weintern-gray-normal.text-over
 															if item.salary != "不限"
 																span ￥#{item.salary}元/天 |
