--- a/views/pages/worksiteResult.jade
+++ b/views/pages/worksiteResult.jade
@@ -16,8 +16,8 @@ block content
 												a(href="/weintern/job/detail/" + item._id)
 													img(src="/uploads/#{item.image}", alt="#{item.company}", style="height:350px;")
 												.caption
-													span.weintern-font-larger.weintern-black-deeper.text-over(style="width:50%") #{item.company}
-													span.weintern-font-larger.weintern-black-deeper.text-over(style="width:50%") #{item.jobname}
+													span.weintern-font-larger.weintern-black-deeper.text-over(style="display:inline-block;width:50%") #{item.company}
+													span.weintern-font-larger.weintern-black-deeper.text-over(style="display:inline-block;width:50%") #{item.jobname}
 													h5.weintern-gray-normal.text-over
 														if item.salary != "不限"
 															span ￥#{item.salary}元/天 |
