详情页页面修改

--- a/views/pages/jobDetail.jade
+++ b/views/pages/jobDetail.jade
@@ -18,11 +18,11 @@ block content
 					if job.internWeek != '0'
 						span  #{job.internWeek}天/周 |
 					else
-						span  实习天数面议
+						span  实习天数面议 |
 					if job.interMonth != '0'
 						span  实习#{job.interMonth}个月 |
 					else
-						span  实习月份面议
+						span  实习月份面议 |
 					if job.canBeRegular == '是'
 						span  可转正
 					else if job.canBeRegular == '否'
