实习月份数据修改

--- a/views/pages/jobAdd.jade
+++ b/views/pages/jobAdd.jade
@@ -82,7 +82,7 @@ block content
 					label.col-sm-2.control-label(for="inputInterMonth") 实习月份
 						strong(style="color:red;font-size:15px") &nbsp;* 必填, 分三种情况，仅限数字(1.填非0数字，如'3'; 2.范围,如 '3-6'; 3.不确定多少个月，请填写'0')
 					.col-sm-10.input-group(style="padding-left:15px;padding-right:15px")
-						input#inputInterMonth.form-control(type="text",placeholder="请填入岗位实习持续月份要求",name="job[interMonth]",value="#{job.interMonth}")
+						input#inputInterMonth.form-control(type="text",placeholder="请填入岗位实习持续月份要求",name="job[internMonth]",value="#{job.internMonth}")
 						span.input-group-addon 个月
 				.form-group
 					label.col-sm-2.control-label 是否可转正
