--- a/views/pages/jobDetail.jade
+++ b/views/pages/jobDetail.jade
@@ -19,8 +19,8 @@ block content
 						span  #{job.internWeek}天/周 |
 					else
 						span  实习天数面议 |
-					if job.interMonth != '0'
-						span  实习#{job.interMonth}个月 |
+					if job.internMonth != '0'
+						span  实习#{job.internMonth}个月 |
 					else
 						span  实习月份面议 |
 					if job.canBeRegular == '是'
