--- a/views/pages/search.jade
+++ b/views/pages/search.jade
@@ -30,8 +30,8 @@ block content
 														span  #{item.internWeek}天/周 |
 													else
 														span 实习天数面议 |
-													if item.interMonth != '0'
-														span  #{item.interMonth}个月 |
+													if item.internMonth != '0'
+														span  #{item.internMonth}个月 |
 													else
 														span  实习月份面议
 													if item.canBeRegular == "是"
@@ -63,8 +63,8 @@ block content
 															span  #{item.internWeek}天/周 |
 														else
 															span  实习天数面议 |
-														if item.interMonth != '0'
-															span  #{item.interMonth}个月 |
+														if item.internMonth != '0'
+															span  #{item.internMonth}个月 |
 														else
 															span  实习月份面议
 														if item.canBeRegular == "是"
