增加微信小程序用户中心

--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -44,6 +44,8 @@
 							li
 								a(href="/weintern/user/list") 用户列表
 							li
+								a(href="/weintern/user/wehcatList") 微信用户列表
+							li
 								a(href="/") 返回首页
 					a.btn.btn-danger(href="/weintern/loginout",style="display:inline; margin-left:10px;") 注销
 			else
